# qa-dept

./: README.md
.github/workflows/: main.yml
Pytest/: .gitignore  Dockerfile  main.py
Pytest/tests/: conftest.py  pytest.ini  test_capitalize.py  test_compare.py  test_div_by_13.py  test_div_by_3_6.py  test_multiplication.py  test_square.py
PytestBDD/tests/features/: cucumbers.feature
cypress-studio/: .gitignore  Dockerfile  README.md  cypress.config.js  package-lock.json  package.json
cypress-studio/.github/workflows/: ci.yml
cypress-studio/cypress/e2e/checkout/: shopping-cart.cy.js
cypress-studio/cypress/e2e/login/: login.cy.js
cypress-studio/cypress/integration/checkout/: shopping-cart.spec.js
cypress-studio/cypress/integration/login/: login.spec.js
nightwatchJS/: .gitignore  Dockerfile  README.md  globals.js  nightwatch.conf.js  package.json
nightwatchJS/features/: homepage.feature
nightwatchJS/tests/: Demo.js  DemoBDD.js
pytest/: pyproject.toml
pytest/tests/: test_mobile.py  test_web.py
pytest_project/: .gitignore
pytest_project/pytest-env/: test_wallet.py  wallet.py
seleniumJavaExperiment/: .gitignore  README.md  pom.xml
seleniumJavaExperiment/src/test/java/: SeleniumTests.java
seleniumJavaExperiment/src/test/java/pageObjects/: ABtestPage.java  CheckboxesPage.java  DropDownPage.java  HomePage.java  HoverPage.java  InputNumPage.java  KeyPress.java
